test_outputs/connlist/k8s_ingress_test_connlist_output.txt
0.0.0.0-255.255.255.255[External] => default/details-v1-79f774bdb9[ReplicaSet] : All Connections
0.0.0.0-255.255.255.255[External] => default/productpage-v1-6b746f74dc[ReplicaSet] : All Connections
0.0.0.0-255.255.255.255[External] => default/ratings-v1-b6994bb9[ReplicaSet] : All Connections
0.0.0.0-255.255.255.255[External] => default/reviews-v1-545db77b95[ReplicaSet] : All Connections
0.0.0.0-255.255.255.255[External] => default/reviews-v2-7bf8c9648f[ReplicaSet] : All Connections
0.0.0.0-255.255.255.255[External] => default/reviews-v3-84779c7bbc[ReplicaSet] : All Connections
default/details-v1-79f774bdb9[ReplicaSet] => 0.0.0.0-255.255.255.255[External] : All Connections
default/details-v1-79f774bdb9[ReplicaSet] => default/productpage-v1-6b746f74dc[ReplicaSet] : All Connections
default/details-v1-79f774bdb9[ReplicaSet] => default/ratings-v1-b6994bb9[ReplicaSet] : All Connections
default/details-v1-79f774bdb9[ReplicaSet] => default/reviews-v1-545db77b95[ReplicaSet] : All Connections
default/details-v1-79f774bdb9[ReplicaSet] => default/reviews-v2-7bf8c9648f[ReplicaSet] : All Connections
default/details-v1-79f774bdb9[ReplicaSet] => default/reviews-v3-84779c7bbc[ReplicaSet] : All Connections
default/productpage-v1-6b746f74dc[ReplicaSet] => 0.0.0.0-255.255.255.255[External] : All Connections
default/productpage-v1-6b746f74dc[ReplicaSet] => default/details-v1-79f774bdb9[ReplicaSet] : All Connections
default/productpage-v1-6b746f74dc[ReplicaSet] => default/ratings-v1-b6994bb9[ReplicaSet] : All Connections
default/productpage-v1-6b746f74dc[ReplicaSet] => default/reviews-v1-545db77b95[ReplicaSet] : All Connections
default/productpage-v1-6b746f74dc[ReplicaSet] => default/reviews-v2-7bf8c9648f[ReplicaSet] : All Connections
default/productpage-v1-6b746f74dc[ReplicaSet] => default/reviews-v3-84779c7bbc[ReplicaSet] : All Connections
default/ratings-v1-b6994bb9[ReplicaSet] => 0.0.0.0-255.255.255.255[External] : All Connections
default/ratings-v1-b6994bb9[ReplicaSet] => default/details-v1-79f774bdb9[ReplicaSet] : All Connections
default/ratings-v1-b6994bb9[ReplicaSet] => default/productpage-v1-6b746f74dc[ReplicaSet] : All Connections
default/ratings-v1-b6994bb9[ReplicaSet] => default/reviews-v1-545db77b95[ReplicaSet] : All Connections
default/ratings-v1-b6994bb9[ReplicaSet] => default/reviews-v2-7bf8c9648f[ReplicaSet] : All Connections
default/ratings-v1-b6994bb9[ReplicaSet] => default/reviews-v3-84779c7bbc[ReplicaSet] : All Connections
default/reviews-v1-545db77b95[ReplicaSet] => 0.0.0.0-255.255.255.255[External] : All Connections
default/reviews-v1-545db77b95[ReplicaSet] => default/details-v1-79f774bdb9[ReplicaSet] : All Connections
default/reviews-v1-545db77b95[ReplicaSet] => default/productpage-v1-6b746f74dc[ReplicaSet] : All Connections
default/reviews-v1-545db77b95[ReplicaSet] => default/ratings-v1-b6994bb9[ReplicaSet] : All Connections
default/reviews-v1-545db77b95[ReplicaSet] => default/reviews-v2-7bf8c9648f[ReplicaSet] : All Connections
default/reviews-v1-545db77b95[ReplicaSet] => default/reviews-v3-84779c7bbc[ReplicaSet] : All Connections
default/reviews-v2-7bf8c9648f[ReplicaSet] => 0.0.0.0-255.255.255.255[External] : All Connections
default/reviews-v2-7bf8c9648f[ReplicaSet] => default/details-v1-79f774bdb9[ReplicaSet] : All Connections
default/reviews-v2-7bf8c9648f[ReplicaSet] => default/productpage-v1-6b746f74dc[ReplicaSet] : All Connections
default/reviews-v2-7bf8c9648f[ReplicaSet] => default/ratings-v1-b6994bb9[ReplicaSet] : All Connections
default/reviews-v2-7bf8c9648f[ReplicaSet] => default/reviews-v1-545db77b95[ReplicaSet] : All Connections
default/reviews-v2-7bf8c9648f[ReplicaSet] => default/reviews-v3-84779c7bbc[ReplicaSet] : All Connections
default/reviews-v3-84779c7bbc[ReplicaSet] => 0.0.0.0-255.255.255.255[External] : All Connections
default/reviews-v3-84779c7bbc[ReplicaSet] => default/details-v1-79f774bdb9[ReplicaSet] : All Connections
default/reviews-v3-84779c7bbc[ReplicaSet] => default/productpage-v1-6b746f74dc[ReplicaSet] : All Connections
default/reviews-v3-84779c7bbc[ReplicaSet] => default/ratings-v1-b6994bb9[ReplicaSet] : All Connections
default/reviews-v3-84779c7bbc[ReplicaSet] => default/reviews-v1-545db77b95[ReplicaSet] : All Connections
default/reviews-v3-84779c7bbc[ReplicaSet] => default/reviews-v2-7bf8c9648f[ReplicaSet] : All Connections
{ingress-controller} => default/details-v1-79f774bdb9[ReplicaSet] : TCP 9080
